--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -220,9 +220,11 @@
     <Compile Include="Finance\InvoiceCheckAppService.cs" />
     <Compile Include="Finance\IVoucherAuditAppService.cs" />
     <Compile Include="Finance\VoucherAuditAppService.cs" />
+    <Compile Include="Purchase\AuditManagementAppService.cs" />
     <Compile Include="Purchase\BiddingManagementAppService.cs" />
     <Compile Include="Purchase\BidOpeningManagementAppService.cs" />
     <Compile Include="Purchase\CostListAppService.cs" />
+    <Compile Include="Purchase\Dto\AuditManagementDto.cs" />
     <Compile Include="Purchase\Dto\BiddingManagementEditDto.cs" />
     <Compile Include="Purchase\Dto\BiddingManagementListDto.cs" />
     <Compile Include="Purchase\Dto\BiddingManagementQueryDto.cs" />
@@ -243,10 +245,15 @@
     <Compile Include="Purchase\Dto\ProcurementPlanListSummaryDto.cs" />
     <Compile Include="Purchase\Dto\ProcurementPlanListDto.cs" />
     <Compile Include="Purchase\Dto\ProcurementPlanQueryDto.cs" />
+    <Compile Include="Purchase\Dto\ProjectManagementPriceEditDto.cs" />
+    <Compile Include="Purchase\Dto\ProjectManagementEditDto.cs" />
+    <Compile Include="Purchase\Dto\ProjectManagementListDto.cs" />
+    <Compile Include="Purchase\Dto\ProjectManagementQueryDto.cs" />
     <Compile Include="Purchase\Dto\StageInfoEditDto.cs" />
     <Compile Include="Purchase\Dto\StageInfoListDto.cs" />
     <Compile Include="Purchase\Dto\StageInfoQueryDto.cs" />
     <Compile Include="Purchase\Dto\TendererDto.cs" />
+    <Compile Include="Purchase\IAuditManagementAppService.cs" />
     <Compile Include="Purchase\IBiddingManagementAppService.cs" />
     <Compile Include="Purchase\IBidOpeningManagementAppService.cs" />
     <Compile Include="Purchase\ICostListAppService.cs" />
@@ -255,6 +262,7 @@
     <Compile Include="Purchase\IPlanWithBudgetOutlayAppService.cs" />
     <Compile Include="Purchase\IProcessManagementAppService.cs" />
     <Compile Include="Purchase\IProcurementPlanAppService.cs" />
+    <Compile Include="Purchase\IProjectManagementAppService.cs" />
     <Compile Include="Purchase\IStageInfoeAppService.cs" />
     <Compile Include="Purchase\ITendererAppService.cs" />
     <Compile Include="Purchase\PerformanceAmountDetailAppService.cs" />
@@ -262,6 +270,7 @@
     <Compile Include="Purchase\PlanWithBudgetOutlayAppService.cs" />
     <Compile Include="Purchase\ProcessManagementAppService.cs" />
     <Compile Include="Purchase\ProcurementPlanAppService.cs" />
+    <Compile Include="Purchase\ProjectManagementAppService.cs" />
     <Compile Include="Purchase\StageInfoeAppService.cs" />
     <Compile Include="Purchase\TendererAppService.cs" />
     <Compile Include="Storage\Dto\DeliveryBillQueryDto.cs" />
