--- a/TAF.Web/Web.config
+++ b/TAF.Web/Web.config
@@ -30,7 +30,7 @@
     <add key="ExternalAuth.Google.ClientSecret" value=""/>
   </appSettings>
   <connectionStrings>
-    <add name="Default" connectionString="Server=(LocalDb)\v11.0; Database=SCBF; Trusted_Connection=True;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient"/>
+    <add name="Default" connectionString="Server=192.168.10.146; Database=TEST;User ID=ike;Password=ike-Publish];MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
