--- a/TAF.EntityFramework/App.config
+++ b/TAF.EntityFramework/App.config
@@ -10,7 +10,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Default" connectionString="Server=(LocalDb)\v11.0; Database=SCBF; Trusted_Connection=True;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Server=192.168.10.146; Database=TEST;User ID=ike;Password=ike-Publish];MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
